# SovelmaOS

./: .gitignore  CRITIQUE.md  Cargo.toml  LICENSE  NEXT_STEPS.md  README.md  rust-toolchain.toml
.agent/rules/: os-dev.md
.agent/workflows/: quality-check.md  refactor.md
.cargo/: config.toml
docs/: DESIGN.md  getting-started.md
docs/architecture/: decisions.md  overview.md  spa-reference.md
docs/specs/: 01-architecture.md  02-filesystem.md  03-balboa-controller.md
scripts/: setup_windows.ps1
src/common/: Cargo.toml
src/common/src/: capability.rs  error.rs  lib.rs  net.rs
src/hal/: Cargo.toml
src/hal/src/: lib.rs
src/kernel/: Cargo.toml  bootimage.toml
src/kernel/.cargo/: config.toml
src/kernel/src/: allocator.rs  lib.rs  main.rs  memory.rs  tests.rs
src/kernel/src/arch/: mod.rs
src/kernel/src/arch/x86_64/: gdt.rs  interrupts.rs  mod.rs  pci.rs  pic.rs  serial.rs  vga.rs
src/kernel/src/boot/: banner.rs  mod.rs
src/kernel/src/capability/: mod.rs
src/kernel/src/fs/: mod.rs  ramfs.rs
src/kernel/src/net/: device.rs  dhcp.rs  dns.rs  e1000.rs  mod.rs  socket.rs  stack.rs
src/kernel/src/sync/: mod.rs  mutex.rs  registry.rs  semaphore.rs
src/kernel/src/task/: executor.rs  keyboard.rs  mod.rs
src/kernel/src/terminal/: commands.rs  mod.rs  shell.rs
src/kernel/src/testutil/: mod.rs
src/kernel/src/wasm/: host.rs  mod.rs
src/kernel/tests/: basic_boot.rs
src/userspace/apps/hello/: Cargo.toml
src/userspace/apps/hello/src/: lib.rs
src/userspace/sdk/: Cargo.toml
src/userspace/sdk/src/: lib.rs
