[package]
name = "sovelma-kernel"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# Common dependencies for all architectures
log = { version = "0.4", default-features = false }
spin = { version = "0.9", default-features = false, features = ["once", "mutex", "spin_mutex"] }

# x86_64 architecture dependencies
[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = "=0.9.23"
uart_16550 = "0.3"
x86_64 = "=0.14.11"

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
